--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Avenu</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="https://github.com/AmirChebbi">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
